--- a/config.toml
+++ b/config.toml
@@ -19,7 +19,7 @@ googleAnalytics = "UA-80507391-1"
 	favicon = "favicon.ico"
 	appletouchicon = "apple-touch-icon-precomposed.png"
 	background = "bg1.jpg"
-	avatar = "jane.jpg"
+	avatar = "ben.jpg"
 	
 	# Personal settings
 	
